Cleaned up file structure (did not need express organization)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../public/style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
   <div id="modal">
@@ -32,10 +32,10 @@
     </div>
   </section>
   <section id="bubble-zone">
-    <img class="cloud-1" src="../public/cloud1.svg" alt="Cloud"/>
-    <img class="cloud-2" src="../public/cloud1.svg" alt="Cloud"/>
+    <img class="cloud-1" src="./cloud1.svg" alt="Cloud"/>
+    <img class="cloud-2" src="./cloud1.svg" alt="Cloud"/>
     <p class="mobile-disclaimer">Mobile version </br> coming soon! 🙌 </p>
   </section>
-  <script src="../public/index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
